<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile.UserProfileFragment">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="410dp"
        android:layout_height="159dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="223dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/jellyfish_1"
            tools:srcCompat="@drawable/jellyfish_1" />

        <ImageButton
            android:id="@+id/modifyProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:src="@android:drawable/ic_menu_edit" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="346dp"
            android:layout_height="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.346" />

        <TextView
            android:id="@+id/lifePoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="449dp"
            android:text="@string/punti_vita"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <TextView
            android:id="@+id/username"
            android:layout_width="156dp"
            android:layout_height="34dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="171dp"
            android:layout_marginEnd="100dp"
            android:text="@string/louis_mario"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2045_punti_esperienza"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.567"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/profilePicImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="105dp"
            android:layout_marginBottom="43dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.144"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/esempio_profilepic"
            tools:srcCompat="@drawable/esempio_profilepic" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="199dp"
        android:layout_height="52dp"
        android:text="@string/condividi_la_posizione_con_i_tuoi_amici"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.169"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.898" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="414dp"
        android:layout_height="166dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.551">

        <ImageButton
            android:id="@+id/imageButtonArmatura"
            android:layout_width="87dp"
            android:layout_height="83dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="11dp"
            android:contentDescription="@string/armatura"
            app:layout_constraintBottom_toTopOf="@+id/livelloArmatura"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButtonAmuleto"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:srcCompat="@drawable/scudo" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="89dp"
            android:layout_height="21dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="3dp"
            android:text="@string/armatura"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/imageButtonArmatura"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/testoAmuleto"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButtonArma"
            android:layout_width="87dp"
            android:layout_height="83dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="7dp"
            android:contentDescription="@string/arma"
            app:layout_constraintBottom_toTopOf="@+id/livelloArma"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonAmuleto"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testoArma"
            app:srcCompat="@drawable/ascia" />

        <ImageButton
            android:id="@+id/imageButtonAmuleto"
            android:layout_width="87dp"
            android:layout_height="83dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="7dp"
            android:contentDescription="@string/amuleto"
            app:layout_constraintBottom_toTopOf="@+id/livelloAmuleto"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonArmatura"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButtonArma"
            app:layout_constraintTop_toBottomOf="@+id/testoAmuleto"
            app:srcCompat="@drawable/corno_magico" />

        <TextView
            android:id="@+id/livelloArmatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="24dp"
            android:text="lv 46"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/livelloAmuleto"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonArmatura" />

        <TextView
            android:id="@+id/livelloAmuleto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="29dp"
            android:text="@string/lv_23"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/livelloArmatura"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/livelloArma"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonAmuleto" />

        <TextView
            android:id="@+id/livelloArma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="28dp"
            android:text="@string/lv_19"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/livelloAmuleto"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButtonArma" />

        <TextView
            android:id="@+id/testoAmuleto"
            android:layout_width="86dp"
            android:layout_height="20dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:text="@string/amuleto"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/imageButtonAmuleto"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/testoArma"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/testoArma"
            android:layout_width="85dp"
            android:layout_height="21dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="3dp"
            android:text="@string/arma"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/imageButtonArma"
            app:layout_constraintEnd_toStartOf="@+id/testoAmuleto"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>